Fixed the icon overlap

--- a/src/styles/tooltip.scss
+++ b/src/styles/tooltip.scss
@@ -22,15 +22,18 @@
       display: flex;
       flex-direction: row;
       justify-content: left;
+      align-items: center;
 
       & i {
         width: 30px;
         padding-right: 5px;
         text-align: center;
+        flex: 1;
       }
       
       & span {
         word-break: break-word;
+        flex: 5;
       }
     }
   }
